--- a/Note_pitches.ipynb
+++ b/Note_pitches.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -344,74 +344,74 @@
       "n = 1\n",
       "train shape = (1275, 12)\n",
       "test shape = (340, 12)\n",
-      "best k = 3, best acc = 0.6911764705882353\n",
+      "best k = 6, best acc = 0.65\n",
       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=3, p=2,\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=6, p=2,\n",
       "           weights='uniform')\n",
-      "acc: 0.6911764705882353 \n",
+      "acc: 0.65 \n",
       "\n",
       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.46176470588235297 \n",
+      "acc: 0.6 \n",
       "\n",
       "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
       "     verbose=0)\n",
-      "acc: 0.5941176470588235 \n",
+      "acc: 0.6529411764705882 \n",
       "\n",
       "n = 2\n",
       "train shape = (1275, 156)\n",
       "test shape = (340, 156)\n",
-      "best k = 1, best acc = 0.6882352941176471\n",
+      "best k = 2, best acc = 0.7176470588235294\n",
       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=1, p=2,\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=2, p=2,\n",
       "           weights='uniform')\n",
-      "acc: 0.6882352941176471 \n",
+      "acc: 0.7176470588235294 \n",
       "\n",
       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.5147058823529411 \n",
+      "acc: 0.6588235294117647 \n",
       "\n",
       "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
       "     verbose=0)\n",
-      "acc: 0.7 \n",
+      "acc: 0.7323529411764705 \n",
       "\n",
       "n = 3\n",
       "train shape = (1275, 1884)\n",
       "test shape = (340, 1884)\n",
-      "best k = 2, best acc = 0.7029411764705882\n",
+      "best k = 2, best acc = 0.7176470588235294\n",
       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
       "           metric_params=None, n_jobs=1, n_neighbors=2, p=2,\n",
       "           weights='uniform')\n",
-      "acc: 0.7029411764705882 \n",
+      "acc: 0.7176470588235294 \n",
       "\n",
       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.5558823529411765 \n",
+      "acc: 0.7147058823529412 \n",
       "\n",
       "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
       "     verbose=0)\n",
-      "acc: 0.7588235294117647 \n",
+      "acc: 0.7558823529411764 \n",
       "\n",
       "n = 4\n",
-      "train shape = (1275, 22611)\n",
-      "test shape = (340, 22611)\n",
-      "best k = 2, best acc = 0.7058823529411765\n",
+      "train shape = (1275, 22598)\n",
+      "test shape = (340, 22598)\n",
+      "best k = 1, best acc = 0.7147058823529412\n",
       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=1, n_neighbors=2, p=2,\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=1, p=2,\n",
       "           weights='uniform')\n",
-      "acc: 0.7058823529411765 \n",
+      "acc: 0.7147058823529412 \n",
       "\n",
       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)\n",
-      "acc: 0.6029411764705882 \n",
+      "acc: 0.7558823529411764 \n",
       "\n",
       "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
       "     verbose=0)\n",
-      "acc: 0.7647058823529411 \n",
+      "acc: 0.7823529411764706 \n",
       "\n"
      ]
     }
@@ -433,14 +433,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n = 4\n",
       "train shape = (1275, 22598)\n",
       "test shape = (340, 22598)\n",
       "LinearSVC(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
@@ -453,7 +452,12 @@
     }
    ],
    "source": [
-    "ngrams_train, ngrams_test = ngrams_vectorize(x_train, x_test,4)\n",
+    "ngram_vectorizer = CountVectorizer(token_pattern=\"\\d+\", ngram_range=(1, 4))\n",
+    "ngrams_train = ngram_vectorizer.fit_transform(x_train)\n",
+    "ngrams_test = ngram_vectorizer.transform(x_test)\n",
+    "\n",
+    "print(\"train shape =\", ngrams_train.shape)\n",
+    "print(\"test shape =\", ngrams_test.shape)\n",
     "\n",
     "clf = svm.LinearSVC(dual=False)\n",
     "fit(ngrams_train, y_train,ngrams_test,y_test,[clf])\n"
@@ -468,32 +472,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"models/smv.dat\",\"wb+\") as f:\n",
-    "    pickle.dump(clf,f)"
+    "clfobj = loader.Classifier(clf,composerNames,ngram_vectorizer, \"chords_t\",loader.get_root)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"models/svm_4grams.dat\",\"wb\") as f:\n",
+    "    pickle.dump(clfobj,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] Systém nemůže nalézt uvedenou cestu: 'C:\\\\Users\\\\jiriv\\\\Documents\\\\ROP\\\\NotationClassifier\\\\midis'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-b20b5788973c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloader\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_folder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"midis\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"chords\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Documents\\ROP\\NotationClassifier\\data_loader.py\u001b[0m in \u001b[0;36mload_folder\u001b[1;34m(folder, dataset)\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[0mfolder\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfolder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m     paths = [os.path.join(folder, f) for f in os.listdir(\n\u001b[1;32m---> 36\u001b[1;33m         folder) if f.endswith(\".mxl\") or f.endswith(\".mid\")]\n\u001b[0m\u001b[0;32m     37\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] Systém nemůže nalézt uvedenou cestu: 'C:\\\\Users\\\\jiriv\\\\Documents\\\\ROP\\\\NotationClassifier\\\\midis'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# x,files = loader.load_folder(\"midis\",\"chords\")"
@@ -547,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
